--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-simple-chatbot": "^0.6.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.7.5"
   },
