--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "api-ai-javascript": "^2.0.0-beta.21"
   }
 }
